Remove organizations, added connection to user
